--- a/frontend-game/index.html
+++ b/frontend-game/index.html
@@ -8,8 +8,7 @@
     <!-- NES.css and NES.icons -->
     <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
     <link href="https://unpkg.com/nes.icons@latest/css/nes-icons.min.css" rel="stylesheet" />
-    <!-- Fonts: Press Start 2P (fallback) and Minecraftia -->
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <!-- Font: Minecraftia -->
     <link href="https://fonts.cdnfonts.com/css/minecraftia" rel="stylesheet">
   </head>
   <body>
